--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-#inventory       = /etc/ansible/hosts
+inventory       = inventory
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils    = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
 #remote_tmp      = ~/.ansible/tmp
@@ -374,10 +374,11 @@
 
 
 [ssh_connection]
+transport=ssh
+ssh_args = -F ssh.config
 # ssh arguments to use
 # Leaving off ControlPersist will result in poor performance, so use
 # paramiko on older platforms rather than removing it, -C controls compression use
-#ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s
 
 # The base directory for the ControlPath sockets.
 # This is the "%(directory)s" in the control_path option
