Correct first playbook

--- a/1/playbook.yaml
+++ b/1/playbook.yaml
@@ -1,8 +1,7 @@
 ---
-- hosts: all
-  become: yes
+- hosts: servers
   tasks:
     - name: Install ntp
       pacman: name=ntp state=present
     - name: Run ntp daemon
-      service: name=ntpd state=started enable=yes
+      service: name=ntpd state=started enabled=yes
